--- a/aframe.html
+++ b/aframe.html
@@ -11,7 +11,7 @@
         <a-asset-item id="rose-mtl" src="./rose/rose.mtl"></a-asset-item>
       </a-assets>
       <a-marker preset="pattern" type="pattern"
-        url='./pattern-marker.patt'>
+        url='https://raw.githubusercontent.com/wu007kun/aframe-ar-basic-example/master/pattern-marker.patt'>
         <a-entity
           scale="0.005 0.005 0.005"
           rotation="300 30 0"
