--- a/aframe.html
+++ b/aframe.html
@@ -7,8 +7,8 @@
   <body style='margin : 0px; overflow: hidden;'>
     <a-scene embedded arjs>
       <a-assets>
-        <a-asset-item id="rose-obj" src="./rose/rose.obj"></a-asset-item>
-        <a-asset-item id="rose-mtl" src="./rose/rose.mtl"></a-asset-item>
+        <a-asset-item id="rose-obj" src="./crane/crane.obj"></a-asset-item>
+        <a-asset-item id="rose-mtl" src="./crane/crane.mtl"></a-asset-item>
       </a-assets>
       <a-marker preset="pattern" type="pattern"
         url='https://raw.githubusercontent.com/wu007kun/aframe-ar-basic-example/master/pattern-marker.patt'>
