--- a/aframe.html
+++ b/aframe.html
@@ -1,20 +1,19 @@
 <!doctype HTML>
 <html>
-  <head>
-    <script src="./aframe.min.js"></script>
-    <script src="./aframe-ar.js"></script>
-  </head>
+  <script src="./aframe.min.js"></script>
+  <script src="./aframe-ar.js"></script>
   <body style='margin : 0px; overflow: hidden;'>
     <a-scene embedded arjs>
       <a-assets>
-        <a-asset-item id="rose-obj" src="./crane/crane.obj"></a-asset-item>
-        <a-asset-item id="rose-mtl" src="./crane/crane.mtl"></a-asset-item>
+        <a-asset-item id="rose-obj" src="./rose/rose.obj"></a-asset-item>
+        <a-asset-item id="rose-mtl" src="./rose/rose.mtl"></a-asset-item>
       </a-assets>
       <a-marker preset="pattern" type="pattern"
-        url='https://raw.githubusercontent.com/wu007kun/aframe-ar-basic-example/master/pattern-marker.patt'>
+        url='https://raw.githubusercontent.com/wu007kun/aframe-ar-basic-example/master/donna.patt'>
         <a-entity
-          scale="0.005 0.005 0.005"
-          rotation="300 30 0"
+          position="0 0 0"
+          rotation="270 0 0"
+          scale="0.01 0.01 0.01"
           obj-model="obj: #rose-obj; mtl: #rose-mtl">
         </a-entity>
       </a-marker>
